[fix][io] Aeron source: join after interrupt, make strategy list immutable
Addresses review feedback on #128.

closeQuietly() interrupted the poll thread on join timeout and then fell
straight through to closing the subscription and the Aeron client. If the loop
was parked in a blocking consume(), it could still be inside subscription.poll()
while Aeron tore the subscription down underneath it, which surfaces as spurious
exceptions during shutdown. It now joins a second time after interrupting and
logs if the thread is still alive before closing anyway, so shutdown is bounded
either way.

IdleStrategies.SUPPORTED used Arrays.asList, which is fixed-size but still
mutable through set(). supportedStrategies() returns it directly, so a caller
could have changed what isSupported() and create() accept. Now List.of, with a
test pinning it.